# LancerRaceMasSimulator

./: .gitignore  CMakeLists.txt  README.md
docs/: LANCER MILLE-BORNES.txt
include/Cards/: ICard.h  ICardPlayer.h  IDeck.h
src/: CMakeLists.txt  main.cpp
src/Cards/: CMakeLists.txt  DistanceCard.cpp  DistanceCard.h  StandardDeck.h  StandardPlayer.cpp  StandardPlayer.h
src/Program/: ProgramOptions.cpp  ProgramOptions.h
src/Racers/: Racer.cpp  Racer.h  Team.cpp  Team.h
tests/: CMakeLists.txt
tests/Cards/: StandardDeck_test.cpp
tests/Racers/: Racer_test.cpp
